jvector-native/src/main/java/io/github/jbellis/jvector/vector/cnative/NativeSimdOps.java


    /**
     * {@snippet lang=c :
     * float assemble_and_sum_f32(const float *data, int dataBase, const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength)
     * }
     */
    public static float assemble_and_sum_f32(MemorySegment data, int dataBase, MemorySegment baseOffsets, int baseOffsetsOffset, long baseOffsetsLength) {
        var mh$ = assemble_and_sum_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("assemble_and_sum_f32", data, dataBase, baseOffsets, baseOffsetsOffset, baseOffsetsLength);
            }
            return (float)mh$.invokeExact(data, dataBase, baseOffsets, baseOffsetsOffset, baseOffsetsLength);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class assemble_and_sum_pq_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_INT
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("assemble_and_sum_pq_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float assemble_and_sum_pq_f32(const float *data, size_t subspaceCount, const unsigned char *baseOffsets1, int baseOffsetsOffset1, const unsigned char *baseOffsets2, int baseOffsetsOffset2, int clusterCount)
     * }
     */
    public static FunctionDescriptor assemble_and_sum_pq_f32$descriptor() {
        return assemble_and_sum_pq_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float assemble_and_sum_pq_f32(const float *data, size_t subspaceCount, const unsigned char *baseOffsets1, int baseOffsetsOffset1, const unsigned char *baseOffsets2, int baseOffsetsOffset2, int clusterCount)
     * }
     */
    public static MethodHandle assemble_and_sum_pq_f32$handle() {
        return assemble_and_sum_pq_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float assemble_and_sum_pq_f32(const float *data, size_t subspaceCount, const unsigned char *baseOffsets1, int baseOffsetsOffset1, const unsigned char *baseOffsets2, int baseOffsetsOffset2, int clusterCount)
     * }
     */
    public static MemorySegment assemble_and_sum_pq_f32$address() {
        return assemble_and_sum_pq_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float assemble_and_sum_pq_f32(const float *data, size_t subspaceCount, const unsigned char *baseOffsets1, int baseOffsetsOffset1, const unsigned char *baseOffsets2, int baseOffsetsOffset2, int clusterCount)
     * }
     */
    public static float assemble_and_sum_pq_f32(MemorySegment data, long subspaceCount, MemorySegment baseOffsets1, int baseOffsetsOffset1, MemorySegment baseOffsets2, int baseOffsetsOffset2, int clusterCount) {
        var mh$ = assemble_and_sum_pq_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("assemble_and_sum_pq_f32", data, subspaceCount, baseOffsets1, baseOffsetsOffset1, baseOffsets2, baseOffsetsOffset2, clusterCount);
            }
            return (float)mh$.invokeExact(data, subspaceCount, baseOffsets1, baseOffsetsOffset1, baseOffsets2, baseOffsetsOffset2, clusterCount);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class pq_decoded_cosine_similarity_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_FLOAT
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("pq_decoded_cosine_similarity_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float pq_decoded_cosine_similarity_f32(const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength, int clusterCount, const float *partialSums, const float *aMagnitude, float bMagnitude)
     * }
     */
    public static FunctionDescriptor pq_decoded_cosine_similarity_f32$descriptor() {
        return pq_decoded_cosine_similarity_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float pq_decoded_cosine_similarity_f32(const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength, int clusterCount, const float *partialSums, const float *aMagnitude, float bMagnitude)
     * }
     */
    public static MethodHandle pq_decoded_cosine_similarity_f32$handle() {
        return pq_decoded_cosine_similarity_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float pq_decoded_cosine_similarity_f32(const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength, int clusterCount, const float *partialSums, const float *aMagnitude, float bMagnitude)
     * }
     */
    public static MemorySegment pq_decoded_cosine_similarity_f32$address() {
        return pq_decoded_cosine_similarity_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float pq_decoded_cosine_similarity_f32(const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength, int clusterCount, const float *partialSums, const float *aMagnitude, float bMagnitude)
     * }
     */
    public static float pq_decoded_cosine_similarity_f32(MemorySegment baseOffsets, int baseOffsetsOffset, long baseOffsetsLength, int clusterCount, MemorySegment partialSums, MemorySegment aMagnitude, float bMagnitude) {
        var mh$ = pq_decoded_cosine_similarity_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("pq_decoded_cosine_similarity_f32", baseOffsets, baseOffsetsOffset, baseOffsetsLength, clusterCount, partialSums, aMagnitude, bMagnitude);
            }
            return (float)mh$.invokeExact(baseOffsets, baseOffsetsOffset, baseOffsetsLength, clusterCount, partialSums, aMagnitude, bMagnitude);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class calculate_partial_sums_dot_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("calculate_partial_sums_dot_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void calculate_partial_sums_dot_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static FunctionDescriptor calculate_partial_sums_dot_f32$descriptor() {
        return calculate_partial_sums_dot_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void calculate_partial_sums_dot_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static MethodHandle calculate_partial_sums_dot_f32$handle() {
        return calculate_partial_sums_dot_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void calculate_partial_sums_dot_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static MemorySegment calculate_partial_sums_dot_f32$address() {
        return calculate_partial_sums_dot_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void calculate_partial_sums_dot_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static void calculate_partial_sums_dot_f32(MemorySegment codebook, int codebookIndex, long size, int clusterCount, MemorySegment query, int queryOffset, MemorySegment partialSums) {
        var mh$ = calculate_partial_sums_dot_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("calculate_partial_sums_dot_f32", codebook, codebookIndex, size, clusterCount, query, queryOffset, partialSums);
            }
            mh$.invokeExact(codebook, codebookIndex, size, clusterCount, query, queryOffset, partialSums);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class calculate_partial_sums_euclidean_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("calculate_partial_sums_euclidean_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void calculate_partial_sums_euclidean_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static FunctionDescriptor calculate_partial_sums_euclidean_f32$descriptor() {
        return calculate_partial_sums_euclidean_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void calculate_partial_sums_euclidean_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static MethodHandle calculate_partial_sums_euclidean_f32$handle() {
        return calculate_partial_sums_euclidean_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void calculate_partial_sums_euclidean_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static MemorySegment calculate_partial_sums_euclidean_f32$address() {
        return calculate_partial_sums_euclidean_f32.ADDR;
    }
